Fix z-index only in date range input

--- a/src/DateRangeInput/DateRangeInput.scss
+++ b/src/DateRangeInput/DateRangeInput.scss
@@ -14,3 +14,7 @@
     }
   }
 }
+
+.focused {
+  z-index: 2;
+}
